@@ -1,3 +1,15 @@
+2017-01-09  Gerrit Holl  <g.holl@reading.ac.uk>:
+
+	* typhon/datasets/dataset.py(Dataset.read):
+
+	- when sorted data are requested, verify that granule N starts after
+	granule N-1 finishes.  If this is not the case, raise an error.
+
+	* typhon/datasets/tovs.py(HIRS.filter_firstline):
+
+	- When firstline db is locked, make a temporary copy and try again to
+	read.
+
 2017-01-06  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/tovs.py(HIRS):
